# Algo-Trade

./: .gitignore  ARCHITECTURE.md  README.md  Rust_HFT_Engine_Sync_Plan.md  requirements.txt  run_4h_in_hft.py  runner.py  task.md
engine/: __init__.py  backtest.py  config.py  cross_validate.py  data_loader.py  des_engine.py  events.py  hft_bar_wrapper.py  hft_data_loader.py  latency_bridge.py  lob_python.py  metrics.py  monte_carlo.py  protocols.py  tick_parser.py  walk_forward.py  zmq_bridge.py
hft_engine/: Cargo.toml  pyproject.toml
hft_engine/src/: lib.rs  order_book.rs  sync.rs  types.rs
strategies/: __init__.py  hft_market_maker.py  trend_oscillator.py  winning_config_30m.json  winning_config_4h.json
tests/: test_des_engine.py  test_des_vs_bar_engine.py  test_e2e_hft.py  test_hft_bar_wrapper.py  test_lob_python.py  test_rust_lob.py  test_strategy_inputs.py  test_sync_trace.py  test_zmq_bridge.py
